--- a/templates/experiment.html
+++ b/templates/experiment.html
@@ -2,18 +2,16 @@
 
 {% block body %}
     <div class="main_div">
-        <div id="stimulus">
-            <h1>Read the following text:</h1>
-            <div><blockquote id="story"><p>&lt;&lt; loading &gt;&gt;</p></blockquote></div>
-            <button id="finish-reading" type="button" class="btn btn-primary">I'm done reading.</button>
-        </div>
-
-        <div id="response-form" style="display:none;">
-            <h1>Now reproduce the passage, verbatim:</h1>
-            <p><b>Note:</b> Your task is to recreate the text, word for word, to the best of your ability.<p>
-            <textarea id="reproduction" class="form-control" rows="10"></textarea>
-            <p></p>
-            <button id="submit-response" type="button" class="btn btn-primary">Submit response.</button>
+        <div id="question_div">
+            <h4 id="question_number">This is question 1</h4>
+            <img id = "pics" src="" alt="q1" height="320" width="450">
+            <h3 id="question">Question goes here.</h3>
+            <br>
+            <button id="submit-a" type="button" class="btn btn-primary">Answer A</button>
+            <button id="submit-b" type="button" class="btn btn-primary">Answer B</button>
+            <br>
+            <br>
+            <h2 id="countdown"></h2>
         </div>
     </div>
 {% endblock %}
