--- a/templates/instructions/instruct-ready.html
+++ b/templates/instructions/instruct-ready.html
@@ -6,8 +6,20 @@
 
         <hr>
 
-        <p>In this experiment, you will read a passage of text. Your job is to remember the passage as well as you can, because you will be asked some questions about it afterwards.</p>
+        <p>In this experiment you will first take part in a quiz, and then you will choose between faces. You'll get to see what some other people thought too.</p>
 
+        <p>Before we begin, please tell us whether tyou are primarily interested in men or women as romatic partners:</p>
+
+        <div class="col-md-4">
+            <form>
+                <input type="radio" name="gender" value="none" checked class="hidden"><br>
+                <input type="radio" name="gender" value="men"> Men<br>
+                <input type="radio" name="gender" value="women"> Women<br>
+                <input type="radio" name="gender" value="both"> Both<br>
+            </form>
+        </div>
+
+        <br><br><br><br>
         <hr>
 
         <div>
