--- a/templates/instructions/instruct-ready.html
+++ b/templates/instructions/instruct-ready.html
@@ -8,7 +8,7 @@
 
         <p>In this experiment you will first take part in a quiz, and then you will choose between faces. You'll get to see what some other people thought too.</p>
 
-        <p>Before we begin, please tell us whether tyou are primarily interested in men or women as romatic partners:</p>
+        <p>Before we begin, please tell us whether you are primarily interested in men or women as romatic partners:</p>
 
         <div class="col-md-4">
             <form>
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="col-xs-10"></div>
                 <div class="col-xs-2">
-                    <button type="button" class="btn btn-success btn-lg" onClick="dallinger.goToPage('experiment')">
+                    <button type="button" class="btn btn-success btn-lg disabled" onClick="dallinger.goToPage('experiment')">
                     Begin</button>
                 </div>
             </div>
