my_function attempt 2
I was getting an error in the console that dlgr. was not defined, so I added in the dallinger2.js script.l

--- a/templates/instructions/instruct-ready.html
+++ b/templates/instructions/instruct-ready.html
@@ -41,8 +41,8 @@
                 question: "preference",
                 number: 0,
                 response: this.value
-            }).done() {
-                return dallinger.goToPage('experiment');
+            }).done();{
+                 window.location = dallinger.goToPage('experiment');
             }
         }
 
