Add face img elements

--- a/templates/faces.html
+++ b/templates/faces.html
@@ -4,11 +4,10 @@
     <div class="main_div">
         <div id="question_div" style="display: none">
             <h4 id="question_number">This is face question 1</h4>
-            <img id = "pics" src="" alt="q1" height="320" width="450">
             <h3 id="question">Face question goes here.</h3>
             <br>
-            <button id="submit-a" type="button" class="btn btn-primary">Answer A</button>
-            <button id="submit-b" type="button" class="btn btn-primary">Answer B</button>
+            <img id="face1" src="" alt="q1" height="480" width="640">
+            <img id="face2" src="" alt="q1" height="480" width="640">
             <br>
             <br>
             <h2 id="countdown"></h2>
