--- a/templates/faceround2.html
+++ b/templates/faceround2.html
@@ -7,13 +7,34 @@
             <h3 id="question">Face question goes here.</h3>
             <br>
             <img id="face1" src="" alt="q1" height="300" width="405">
+            <table height="150" width="405">
+                <tr>
+                    <th>Score</th>
+                </tr>
+                <tr>
+                    <th>Part. ID 1 Score</th>
+                </tr>
+                <tr>
+                    <th>Part. ID 2 Score</th>
+                </tr>
+            </table>
             <img id="face2" src="" alt="q1" height="300" width="405">
+            <table height="150" width="405">
+                <tr>
+                    <th>Score</th>
+                <tr>
+                    <th>Part. ID 1 Score</th>
+                </tr>
+                <tr>
+                    <th>Part. ID 2 Score</th>
+                </tr>
+            </table>
             <br>
             <br>
             <h2 id="countdown"></h2>
         </div>
         <div id="wait_div">
-            <h4>You got to the face page!</h4>
+            <h4>Waiting for your next set of faces. Thanks for your patience...</h4>
         </div>
     </div>
 {% endblock %}
