--- a/templates/faces.html
+++ b/templates/faces.html
@@ -7,7 +7,28 @@
             <h3 id="question">Face question goes here.</h3>
             <br>
             <img id="face1" src="" alt="q1" height="300" width="405">
+            <table height="150" width="405">
+                <tr>
+                    <th>Score</th>
+                </tr>
+                <tr>
+                    <th>Part. ID 1 Score</th>
+                </tr>
+                <tr>
+                    <th>Part. ID 2 Score</th>
+                </tr>
+            </table>
             <img id="face2" src="" alt="q1" height="300" width="405">
+            <table height="150" width="405">
+                <tr>
+                    <th>Score</th>
+                <tr>
+                    <th>Part. ID 1 Score</th>
+                </tr>
+                <tr>
+                    <th>Part. ID 2 Score</th>
+                </tr>
+            </table>
             <br>
             <br>
             <h2 id="countdown"></h2>
