gets the table to not appear

--- a/templates/faces.html
+++ b/templates/faces.html
@@ -7,21 +7,24 @@
             <h3 id="question">Face question goes here.</h3>
             <br>
             <img id="face1" src="" alt="q1" height="300" width="405">
-            <table height="150" width="405">
-                <tr>
-                    <th>Score</th>
-                </tr>
-                <tr>
-                    <th>Part. ID 1 Score</th>
-                </tr>
-                <tr>
-                    <th>Part. ID 2 Score</th>
-                </tr>
-            </table>
+            <div id="summary" style="display:none;">
+                <table height="100" width="150" font size="1">
+                    <tr>
+                        <th>Scores of other participants</th>
+                    </tr>
+                    <tr>
+                        <th>Part. ID 1 Score</th>
+                    </tr>
+                    <tr>
+                        <th>Part. ID 2 Score</th>
+                    </tr>
+                </table>
+            </div>
+            
             <img id="face2" src="" alt="q1" height="300" width="405">
-            <table height="150" width="405">
+            <table height="100" width="150" font size="1">
                 <tr>
-                    <th>Score</th>
+                    <th>Scores of other participants</th>
                 <tr>
                     <th>Part. ID 1 Score</th>
                 </tr>
