trying visability instead of display

--- a/templates/faces.html
+++ b/templates/faces.html
@@ -7,7 +7,7 @@
             <h3 id="question">Face question goes here.</h3>
             <br>
             <img id="face1" src="" alt="q1" height="300" width="405">
-            <div id="summary" style="display:none;">
+            <div id="summary" style="visibility: :hidden;">
                 <table height="100" width="150" font size="1">
                     <tr>
                         <th>Scores of other participants</th>
