--- a/templates/faces.html
+++ b/templates/faces.html
@@ -7,8 +7,9 @@
             <h3 id="question">Face question goes here.</h3>
             <br>
             <img id="face1" src="" alt="q1" height="300" width="405">
-            <div id="summary" style="visibility: :hidden;">
-                <table height="100" width="150" font size="1">
+             
+            <div id="summary" style="visibility: hidden;" onclick="this.style.visibility='visable';">
+                <table height="100" width="200" font size="1">
                     <tr>
                         <th>Scores of other participants</th>
                     </tr>
@@ -22,7 +23,7 @@
             </div>
             
             <img id="face2" src="" alt="q1" height="300" width="405">
-            <table height="100" width="150" font size="1">
+            <table height="100" width="200" font size="1">
                 <tr>
                     <th>Scores of other participants</th>
                 <tr>
