--- a/templates/faces.html
+++ b/templates/faces.html
@@ -6,33 +6,19 @@
             <h4 id="question_number">This is face question 1</h4>
             <h3 id="question">Face question goes here.</h3>
             <br>
-            <img id="face1" src="" alt="q1" height="300" width="405">
              
-            <div id="summary" style="visibility: hidden;" onclick="this.style.visibility='visable';">
-                <table height="100" width="200" font size="1">
-                    <tr>
-                        <th>Scores of other participants</th>
+            <div id="summary">
+                <table id="summary_table" class="table-bordered">
+                    <tr id="face_row" style="display: none">
+                        <td><img id="face1" src="" alt="q1" height="300" width="405"></td>
+                        <td><img id="face2" src="" alt="q1" height="300" width="405"></td>
                     </tr>
-                    <tr>
-                        <th>Part. ID 1 Score</th>
-                    </tr>
-                    <tr>
-                        <th>Part. ID 2 Score</th>
+                    <tr id="summary_row" style="display: none">
+                        <td id="summary1"><p>Summary of face 1</p></td>
+                        <td id="summary2"><p>Summary of face 2</p></td>
                     </tr>
                 </table>
             </div>
-            
-            <img id="face2" src="" alt="q1" height="300" width="405">
-            <table height="100" width="200" font size="1">
-                <tr>
-                    <th>Scores of other participants</th>
-                <tr>
-                    <th>Part. ID 1 Score</th>
-                </tr>
-                <tr>
-                    <th>Part. ID 2 Score</th>
-                </tr>
-            </table>
             <br>
             <br>
             <h2 id="countdown"></h2>
