Thicker table boarder

--- a/templates/faces.html
+++ b/templates/faces.html
@@ -8,7 +8,12 @@
             <br>
              
             <div id="summary">
-                <table id="summary_table" class="table-bordered">
+                <style>
+                    table, th, td {
+                        border: 2px solid black;
+                    }
+                </style>
+                <table id="summary_table">
                     <tr id="face_row" style="display: none">
                         <td><img id="face1" src="" alt="q1" height="300" width="405"></td>
                         <td><img id="face2" src="" alt="q1" height="300" width="405"></td>
