using Dallinger base for exit survey

--- a/templates/survey.html
+++ b/templates/survey.html
@@ -1,25 +1,1 @@
-{% extends "layout.html" %}
-
-{% block body %}
-    <div class="main_div">
-        <div id="question_div" style="display: none">
-            <h4 id="question_number">This is Survey Question 1</h4>
-            <h3 id="question">Question goes here.</h3>
-            <br>
-            <button id="submit-a" type="button" class="btn btn-primary">Answer A</button>
-            <button id="submit-b" type="button" class="btn btn-primary">Answer B</button>
-            <br>
-            <br>
-            <h2 id="countdown"></h2>
-        </div>
-        <div id="wait_div">
-            <h4>Waiting for next question. Thanks for your patience...</h4>
-        </div>
-    </div>
-{% endblock %}
-
-{% block scripts %}
-    <script>
-        create_agent();
-    </script>
-{% endblock %}
+{% extends "base/questionnaire.html" %}
