Changing wait_div
I'm not sure how to make different wait divs for the various stages of round 1.
I would like to have an instructions page before they begin choosing faces, and a different wait div between when they are choosing faces for the first time vs. seeing the faces for a second time

--- a/templates/faces.html
+++ b/templates/faces.html
@@ -28,7 +28,7 @@
             <br>
         </div>
         <div id="wait_div">
-            <h4>You got to the face page!</h4>
+            <h4>Please wait while we gather the next set of face images... Thank you for your patience.</h4>
         </div>
     </div>
 {% endblock %}
