--- a/templates/instructions/instruct-ready.html
+++ b/templates/instructions/instruct-ready.html
@@ -6,9 +6,17 @@
 
         <hr>
 
-        <p>In this experiment you will first take part in a quiz, and then you will choose between faces. You'll get to see what some other people thought too.</p>
+        <p>This experiment consists of two parts. 
+            First, there is a pre-test, which consists of several general knowledge questions. Your performance on this pre-test will determine the bonus you receive at the end of the experiment.</p>
 
-        <p>Before we begin, please tell us whether you are primarily interested in men or women as romatic partners:</p>
+            <p>Second, you will be presented with a pair of face images and asked to choose which person you would most likeley be romantically interested in.</p>
+
+            <p>After you have made your decision, you will have a chance to see which person all of the other participants chose. Then, you will be asked to remake your decision. This process will be repeated for a number of pairs of face images.</p>
+
+            <p>For both parts you will have 30 seconds to answer each question. If you do not answer the question in the allotted time you will be automatically removed from the experiment.</p>
+       </p>
+
+        <p>Before the experiment begins, please tell us whether you are primarily interested in men or women as romatic partners:</p>
 
         <div id="radio-div" class="col-md-4">
             <form>
