Adding array and for loop for age question

--- a/templates/survey.html
+++ b/templates/survey.html
@@ -6,18 +6,13 @@
         How old are you?
     </div>
     <div class="col-md-4">
-        <select id="age" name="age">
-        	<option value="---" SELECTED>Please make a selection</option>
-            <option value="18">18</option>
-            <option value="19">19</option>
-            <option value="20">20</option>
-        </select>
+        <select id="age" name="age"></select>>
     </div>
 </div>
 
 <div class="row questions">
     <div class="col-md-8">
-        What is your birth country of origin?
+        What country were you born in?
     </div>
     <div class="col-md-4">
         <select id="birth_country" name="birth_country">
