Adding sex, gender, and sexual orientation questions

--- a/templates/survey.html
+++ b/templates/survey.html
@@ -12,6 +12,51 @@
 
 <div class="row questions">
     <div class="col-md-8">
+        What is the sex you were assigned at birth?
+    </div>
+    <div class="col-md-4">
+      <select id="birth_country" name="birth_country">
+            <option value="Male" SELECTED>Male</option>
+            <option value="Female">Female</option>
+            </select>
+    </div>
+</div>
+
+<div class="row questions">
+    <div class="col-md-8">
+        Which gender idendity best describes you?
+    </div>
+    <div class="col-md-4">
+      <select id="birth_country" name="birth_country">
+            <option value="Male" SELECTED>Male</option>
+            <option value="Female">Female</option>
+            <option value="Transgender Male">Transgender Male</option>
+            <option value="Transgender Female">Transgender Female</option>
+            <option value="Agender">Agender</option>
+            <option value="Bigender">Bigender</option>
+            <option value="Gender Fluid">Gender Fluid</option>
+            <option value="Other/Prefer not to Answer">Other/Prefer not to Answer</option>
+            </select>
+    </div>
+</div>
+
+<div class="row questions">
+    <div class="col-md-8">
+        Which sexual orientation best describes you?
+    </div>
+    <div class="col-md-4">
+      <select id="birth_country" name="birth_country">
+            <option value="Straight" SELECTED>Straight</option>
+            <option value="Gay">Gay</option>
+            <option value="Bisexual">Bisexual</option>
+            <option value="Pansexual">Pansexual</option>
+            <option value="Asexual">Asexual</option>
+            <option value="Other/Prefer not to Answer">Other/Prefer not to Answer</option>
+            </select>
+    </div>
+</div>
+<div class="row questions">
+    <div class="col-md-8">
         What country were you born in?
     </div>
     <div class="col-md-4">
