Fixing typo in age question

--- a/templates/survey.html
+++ b/templates/survey.html
@@ -6,7 +6,7 @@
         How old are you?
     </div>
     <div class="col-md-4">
-        <select id="age" name="age"></select>>
+        <select id="age" name="age"></select>
     </div>
 </div>
 
