adding in new wait div between ready page and first question

--- a/templates/experiment.html
+++ b/templates/experiment.html
@@ -14,6 +14,10 @@
         <div id="wait_div">
             <h4>Waiting for next question. Thanks for your patience...</h4>
         </div>
+        <div id="pretest_wait_div">
+            <h4>Waiting for participants to join... For the pretest portion, please select the correct answer.</h4>
+        </div>
+
     </div>
 {% endblock %}
 
