adding mini instruction divs

--- a/templates/faces.html
+++ b/templates/faces.html
@@ -30,7 +30,15 @@
         <div id="wait_div">
             <h4>Please wait while we gather the next set of face images... Thank you for your patience.</h4>
         </div>
+
+        <div id="first_face_div">
+            <h4>For this next part, please choose one image by clicking on it.</h4>
+        </div>
+        <div id="second_face_div">
+            <h4>Now, after considering the decisions others made, please select one image by clicking on it.</h4>
+        </div>
     </div>
+
 {% endblock %}
 
 {% block scripts %}
