tweak experiment pretest div text

--- a/templates/experiment.html
+++ b/templates/experiment.html
@@ -15,7 +15,7 @@
             <h4>Waiting for next question. Thanks for your patience...</h4>
         </div>
         <div id="pretest_wait_div">
-            <h4>Waiting for participants to join... For the pretest portion, please select the correct answer.</h4>
+            <h4>Waiting for participants to join... Once the questions begin, please select the correct answer.</h4>
         </div>
 
     </div>
