hide experiment wait div by default

--- a/templates/experiment.html
+++ b/templates/experiment.html
@@ -11,8 +11,8 @@
             <br>
             <br>
         </div>
-        <div id="wait_div">
-            <h4>Waiting for next question. Thanks for your patience...</h4>
+        <div id="wait_div" style="display: none">
+            <h4>Waiting for everyone to make a decision. Thanks for your patience...</h4>
         </div>
         <div id="pretest_wait_div">
             <h4>Waiting for participants to join... Once the questions begin, please select the correct answer.</h4>
