--- a/templates/faces.html
+++ b/templates/faces.html
@@ -29,13 +29,10 @@
         </div>
         <div id="wait_div">
             <h4>Please wait while we gather the next set of face images... Thank you for your patience.</h4>
+        <div id="pretest_wait_div">
+            <h4>Waiting for participants to catch up... Once the questions begin, please select the a face image by clicking on it.</h4>
         </div>
 
-        <div id="first_face_div">
-            <h4>For this next part, please choose one image by clicking on it.</h4>
-        </div>
-        <div id="second_face_div">
-            <h4>Now, after considering the decisions others made, please select one image by clicking on it.</h4>
         </div>
     </div>
 
