--- a/templates/faces.html
+++ b/templates/faces.html
@@ -27,12 +27,12 @@
             <br>
             <br>
         </div>
-        <div id="wait_div">
-            <h4>Please wait while we gather the next set of face images... Thank you for your patience.</h4>
         <div id="pretest_wait_div">
             <h4>Waiting for participants to catch up... Once the questions begin, please select the a face image by clicking on it.</h4>
         </div>
 
+        <div id="wait_div" style="display: none">
+            <h4>Please wait while the other participants make their decision... Thank you for your patience.</h4>
         </div>
     </div>
 
