--- a/templates/faces.html
+++ b/templates/faces.html
@@ -6,13 +6,8 @@
             <h4 id="question_number">This is face question 1</h4>
             <h3 id="question">Face question goes here.</h3>
             <br>
-             
             <div id="summary">
-                <style>
-                    table, th, td {
-                        border: 2px solid black;
-                    }
-                </style>
+                <style> table, th, td { border: 2px solid black; } </style>
                 <table id="summary_table">
                     <tr id="face_row" style="display: none">
                         <td><img id="face1" src="" alt="q1" height="300" width="405"></td>
@@ -30,7 +25,6 @@
         <div id="pretest_wait_div">
             <h4>Waiting for participants to catch up... Once the questions begin, please select the a face image by clicking on it.</h4>
         </div>
-
         <div id="wait_div" style="display: none">
             <h4>Please wait while the other participants make their decision... Thank you for your patience.</h4>
         </div>
@@ -40,6 +34,6 @@
 
 {% block scripts %}
     <script>
-        recover_node_id();
+        recover_stored_variables();
     </script>
 {% endblock %}
