--- a/templates/instructions/instruct-ready.html
+++ b/templates/instructions/instruct-ready.html
@@ -9,7 +9,7 @@
         <p>This experiment consists of two parts. 
             First, there is a pre-test, which consists of several general knowledge questions. Your performance on this pre-test will determine the bonus you receive at the end of the experiment.</p>
 
-            <p>Second, you will be presented with a pair of face images and asked to choose which person you would most likeley be romantically interested in.</p>
+            <p>Second, you will be presented with a images of two people and asked to choose which person you would prefer as a romantic partner.</p>
 
             <p>After you have made your decision, you will have a chance to see which person all of the other participants chose. Then, you will be asked to remake your decision. This process will be repeated for a number of pairs of face images.</p>
 
@@ -51,7 +51,7 @@
                 response:  $('input[name="preference"]:checked').val()
             }).done();{
                 dallinger.allowExit();
-                dallinger.goToPage('experiment');
+                dallinger.goToPage('lobby');
             }
         }
 
