--- a/templates/experiment.html
+++ b/templates/experiment.html
@@ -15,14 +15,20 @@
             <h4>Waiting for everyone to make a decision. Thanks for your patience...</h4>
         </div>
         <div id="pretest_wait_div">
-            <h4>Waiting for participants to join... Once the questions begin, please select the correct answer.</h4>
+            <h4>Waiting for the first question to be sent... Once it arrives , please select the correct answer.</h4>
         </div>
-
+        <audio class="audios" id="alert" controls preload="none" style="display: none"> 
+            <source src="static/sounds/alert_long.wav" type="audio/mpeg">
+        </audio>
     </div>
 {% endblock %}
 
 {% block scripts %}
     <script>
-        create_agent();
+        recover_node_id();
+        if (dallinger.storage.get("alert") == true) {
+            $('#alert').trigger('play');
+        }
+        get_info();
     </script>
 {% endblock %}
