Fixed wording for summary table and wait_divs

--- a/templates/faces.html
+++ b/templates/faces.html
@@ -23,7 +23,7 @@
             <br>
         </div>
         <div id="pretest_wait_div">
-            <h4>Waiting for participants to catch up... Once the questions begin, please select the a face image by clicking on it.</h4>
+            <h4>Waiting for participants to catch up. When questions begin, please select one face image.</h4>
         </div>
         <div id="wait_div" style="display: none">
             <h4>Please wait while the other participants make their decision... Thank you for your patience.</h4>
