Update consent and survey page

--- a/templates/consent.html
+++ b/templates/consent.html
@@ -1,1 +1,15 @@
 {% extends "base/consent.html" %}
+
+{% block consent_text %}
+<p>This research is being conducted by Dr Thomas Morgan and Melanie Foreman, researchers in the School of Human Evolution and Social Change at Arizona State University. We are conducting a research study to understand how people choose romantic partners.</p>
+
+<p>I am inviting your participation, which will involve answering a series of general knowledge questions and then picking between hypothetical romantic partners.You will also get to look at the decisions made by other participants. This study will take around 30 minutes and you will be paid $3 upon completing the study, with an additional bonus of up to $3 depending on your score.</p>
+
+<p>Your participation in this study is voluntary and you have the right not to answer any question, and to stop participation at any time. If you choose not to participate or to withdraw from the study at any time, there will be no penalty, however you will not be paid unless you complete the study. The only requirement is that you must be at least 18 years old.</p>
+
+<p>There are no foreseeable risks or discomforts to your participation. Your responses in this study will be shown to other participants while the experiment is ongoing (just as you will see the responses of other participants), however they will be anonymous. Your responses will be confidential once the study completes, and not associated with your name in any way. However, while the study is running they will be associated with your MTurk worker id. Once the study is complete we will replace your worker id with a random string. The results of this study may be used in reports, presentations, or publications but your name and worker id will not be used.</p>
+
+<p>If you have any questions concerning the research study, please contact the lead researcher, Thomas Morgan, at: thomas.j.h.morgan@asu.edu. If you have any questions about your rights as a subject/participant in this research, or if you feel you have been placed at risk, you can contact the Chair of the Human Subjects Institutional Review Board, through the ASU Office of Research Integrity and Assurance, at (480) 965-6788.</p>
+
+<p><b>To give your consent please click the “I agree” button below, otherwise please click the “No thanks” button and return the HIT on Mechanical Turk.</b></p>
+{% endblock consent_text %}
