--- a/templates/survey.html
+++ b/templates/survey.html
@@ -24,7 +24,7 @@
 
 <div class="row questions">
     <div class="col-md-8">
-        Which gender idendity best describes you?
+        Which gender identity best describes you?
     </div>
     <div class="col-md-4">
       <select id="birth_country" name="birth_country">
@@ -46,8 +46,8 @@
     </div>
     <div class="col-md-4">
       <select id="birth_country" name="birth_country">
-            <option value="Straight" SELECTED>Straight</option>
-            <option value="Gay">Gay</option>
+            <option value="Heterosexual" SELECTED>Heterosexual</option>
+            <option value="Homosexual">Homosexual</option>
             <option value="Bisexual">Bisexual</option>
             <option value="Pansexual">Pansexual</option>
             <option value="Asexual">Asexual</option>
