--- a/templates/ad.html
+++ b/templates/ad.html
@@ -1,1 +1,16 @@
 {% extends "base/ad.html" %}
+
+{% block no_assignment %}
+    <h1>Call for participants</h1>
+    <p>
+        The Ecco Lab at Arizona State University is looking for online participants
+        for a brief psychology experiment. The only requirements
+        are that you are at least 18 years old and are a fluent English
+        speaker. The task will take around 30 minutes and will pay $3 with an additional
+        bonus of up to $3.
+    </p>
+    <p>
+        Please click the "Accept HIT" button on the Amazon site
+        above to begin the task.
+    </p>
+{% endblock no_assignment %}
