--- a/templates/instructions/instruct-ready.html
+++ b/templates/instructions/instruct-ready.html
@@ -6,14 +6,11 @@
 
         <hr>
 
-        <p>This experiment consists of two parts. 
-            First, there is a pre-test, which consists of several general knowledge questions. Your performance on this pre-test will determine the bonus you receive at the end of the experiment.</p>
+        <p>This experiment consists of two parts. The first part is a 30 question general knowledge quiz. Your performance on this quiz will determine the bonus you receive at the end of the experiment.</p>
 
-            <p>Second, you will be presented with a images of two people and asked to choose which person you would prefer as a romantic partner.</p>
+        <p>In the second part, you will be presented with images of two people and asked to choose which person you would prefer as a romantic partner. After you have made your choice, you will see the choices of some other participants, including their score on the quiz. Then, you will be asked to remake your decision.</p>
 
-            <p>After you have made your decision, you will have a chance to see which person all of the other participants chose. Then, you will be asked to remake your decision. This process will be repeated for a number of pairs of face images.</p>
-
-            <p>For both parts you will have 30 seconds to answer each question. If you do not answer the question in the allotted time you will be automatically removed from the experiment.</p>
+        <p>For both parts you will have 20 seconds to make your decision. If you do not respond in the allotted time you will be automatically removed from the study.</p>
        </p>
 
         <p>Before the experiment begins, please tell us whether you are primarily interested in men or women as romatic partners:</p>
