Fix typo in instructions

--- a/templates/instructions/instruct-ready.html
+++ b/templates/instructions/instruct-ready.html
@@ -13,7 +13,7 @@
         <p>For both parts you will have 20 seconds to make your decision. If you do not respond in the allotted time you will be automatically removed from the study.</p>
        </p>
 
-        <p>Before the experiment begins, please tell us whether you are primarily interested in men or women as romatic partners:</p>
+        <p>Before the experiment begins, please tell us whether you are primarily interested in men or women as romantic partners:</p>
 
         <div id="radio-div" class="col-md-4">
             <form>
