--- a/templates/lobby.html
+++ b/templates/lobby.html
@@ -4,18 +4,19 @@
     <div class="main_div">
         <h2 id="Welcome to the study"></h2>
         <br>
-        <h4>Waiting for other players to join the group, thank you for your patience.</h4>
-        <br>
-        <h4>Current group size: <span id="current-group-size"></span>/<span id="max-group-size"></span>.</h4>
+        <h4>Waiting for other people to join the group, thank you for your patience.</h4>
+        <h4>Current group size: <span id="current-group-size"></span>.</h4>
         <hr>
-        <p>Once the group is full the experiment will start automatically and an alert will play to let you know. When you hear the alert you switch to this window immediately, as once the experiment starts inactive players will be removed within 30 seconds to avoid holding the group up.</p>
-        <p>You can use the buttons below to hear what the alert sounds like or to disable the alert. You can also enable a mini-alert for every time a new group member arrives.</p>
+        <p>The experiment will start once <span id="max-group-size"></span> people have joined, or, if this is taking too long, in no more than 15 minutes (<span id="minutes-left">XX</span> minutes left).</p>
+        <p>You are welcome to do something else while you wait, and you can use the audio alerts below to let you know when the experiment starts. Once it starts, if you do not return within 20 seconds you will be removed from the group to avoid holding other participants up.</p>
         <br>
-        <button id="play-alert" type="button" class="btn btn-primary">Play alert</button>
+        <p> Alert for when the experiment starts:</p>
+        <button id="play-alert" type="button" class="btn btn-primary">Test alert</button>
         <button id="toggle-alert" type="button" class="btn btn-primary">Disable alert</button>
         <p> Alert is currently <span id="alert-enabled">enabled</span></p>
         <br>
-        <button id="play-mini-alert" type="button" class="btn btn-primary">Play mini-alert</button>
+        <p> Mini-alert each time a new person joins:</p>
+        <button id="play-mini-alert" type="button" class="btn btn-primary">Test mini-alert</button>
         <button id="toggle-mini-alert" type="button" class="btn btn-primary">Enable mini-alert</button>
         <p> Mini-alert is currently <span id="mini-alert-enabled">disabled</span></p>
     </div>
