changing summary text

--- a/templates/faces.html
+++ b/templates/faces.html
@@ -14,8 +14,8 @@
                         <td><img id="face2" src="" alt="q1" height="300" width="405"></td>
                     </tr>
                     <tr id="summary_row" style="display: none">
-                        <td id="summary1" style="font-size:16px; font-weight: bold;"><p>Summary of face 1</p></td>
-                        <td id="summary2" style="font-size:16px; font-weight: bold;"><p>Summary of face 2</p></td>
+                        <td id="summary1" style="font-size:16px; font-weight: normal;"><p>Summary of face 1</p></td>
+                        <td id="summary2" style="font-size:16px; font-weight: normal;"><p>Summary of face 2</p></td>
                     </tr>
                 </table>
             </div>
