bold 30 sec in instructions & lobby

--- a/templates/instructions/instruct-ready.html
+++ b/templates/instructions/instruct-ready.html
@@ -10,7 +10,7 @@
 
         <p>In the second part, you will be presented with images of two people and asked to choose which person you would prefer as a romantic partner. After you have made your choice, you will see the choices of some other participants, including their score on the quiz. Then, you will be asked to remake your decision.</p>
 
-        <p>For both parts you will have 20 seconds to make your decision. If you do not respond in the allotted time you will be automatically removed from the study.</p>
+        <p>For both parts you will have <strong> 30 seconds </strong> to make your decision. If you do not respond in the allotted time you will be automatically removed from the study.</p>
        </p>
 
         <p>Before the experiment begins, please tell us whether you are primarily interested in men or women as romantic partners:</p>
