--- a/templates/lobby.html
+++ b/templates/lobby.html
@@ -8,7 +8,7 @@
         <h4>Current group size: <span id="current-group-size"></span>.</h4>
         <hr>
         <p>The experiment will start once <span id="max-group-size"></span> people have joined, or, if this is taking too long, in no more than 15 minutes (<span id="minutes-left">XX</span> minutes left).</p>
-        <p>You are welcome to do something else while you wait, and you can use the audio alerts below to let you know when the experiment starts. Once it starts, if you do not return within 20 seconds you will be removed from the group to avoid holding other participants up.</p>
+        <p>You are welcome to do something else while you wait, and you can use the audio alerts below to let you know when the experiment starts. Once it starts, if you do not return within <strong> 30 seconds </strong> you will be removed from the group to avoid holding other participants up.</p>
         <br>
         <p> Alert for when the experiment starts:</p>
         <button id="play-alert" type="button" class="btn btn-primary">Test alert</button>
