Rename survey questions

--- a/templates/survey.html
+++ b/templates/survey.html
@@ -15,7 +15,7 @@
         What is the sex you were assigned at birth?
     </div>
     <div class="col-md-4">
-      <select id="birth_country" name="birth_country">
+      <select id="sex" name="sex">
             <option value="Male" SELECTED>Male</option>
             <option value="Female">Female</option>
             </select>
@@ -27,7 +27,7 @@
         Which gender identity best describes you?
     </div>
     <div class="col-md-4">
-      <select id="birth_country" name="birth_country">
+      <select id="gender" name="gender">
             <option value="Male" SELECTED>Male</option>
             <option value="Female">Female</option>
             <option value="Transgender Male">Transgender Male</option>
@@ -45,7 +45,7 @@
         Which sexual orientation best describes you?
     </div>
     <div class="col-md-4">
-      <select id="birth_country" name="birth_country">
+      <select id="orientation" name="orientation">
             <option value="Heterosexual" SELECTED>Heterosexual</option>
             <option value="Homosexual">Homosexual</option>
             <option value="Bisexual">Bisexual</option>
