Add a little timer to the questions

--- a/templates/experiment.html
+++ b/templates/experiment.html
@@ -9,6 +9,7 @@
             <button id="submit-a" type="button" class="btn btn-primary">Answer A</button>
             <button id="submit-b" type="button" class="btn btn-primary">Answer B</button>
             <br>
+            <h4 id="timer"></h4>
             <br>
         </div>
         <div id="wait_div" style="display: none">
