--- a/templates/faces.html
+++ b/templates/faces.html
@@ -20,6 +20,7 @@
                 </table>
             </div>
             <br>
+            <h4 id="timer"></h4>
             <br>
         </div>
         <div id="pretest_wait_div">
